--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,29 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 node_modules
+*.local.*
+~
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
