--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 !.vscode/extensions.json
 node_modules
 *.local.*
-~
+.firebase
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
