--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-firebaseui": "^3.1.2",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.1.8",
     "react-router": "^4.3.1",
