--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
  - "10"
 script:
-  - build
+  - yarn build
 install:
   - npm install -g firebase-tools
   - npm install -g create-react-app
