--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: node_js
 node_js:
  - "10"
 script:
-  - yarn build
+  - yarn ci-build
 install:
   - npm install -g firebase-tools
-  - npm install -g create-react-app
 after-success:
   - firebase deploy -project east-mesa-karate-events -token $FIREBASE_TOKEN
