--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ci-build": "node_modules/react-scripts/bin/react-scripts.js build"
   },
   "devDependencies": {
     "@types/react": "^16.4.16"
