--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 script:
   - yarn ci-build
 install:
+  - npm install
   - npm install -g firebase-tools
 after-success:
   - firebase deploy -project east-mesa-karate-events -token $FIREBASE_TOKEN
