--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
  - "10"
 script:
   - yarn ci-build
-  - firebase deploy -project east-mesa-karate-events -token $FIREBASE_TOKEN
+  - firebase deploy --project east-mesa-karate-events --token $FIREBASE_TOKEN
 install:
   - npm install
   - npm install -g firebase-tools
