--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "devDependencies": {
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
+    "@types/ramda": "^0.25.45",
     "@types/react": "16.7.17",
-    "@types/react-dom": "16.0.11"
+    "@types/react-dom": "16.0.11",
+    "@types/react-redux": "^6.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
