--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2",
-    "typescript": "3.2.2"
+    "react-scripts": "2.1.2"
   },
   "devDependencies": {
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11"
+    "@types/react-dom": "16.0.11",
+    "typescript": "3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
