--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@firebase/app-types": "^0.3.2",
-    "firebase": "^5.7.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-redux-firebase": "^3.0.0-alpha.3",
-    "react-scripts": "2.1.2",
+    "firebase": "^5.5.7",
+    "moment": "^2.22.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "react-redux-firebase": "^2.1.9",
+    "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
-    "redux-firestore": "^0.6.1",
-    "redux-thunk": "^2.3.0"
+    "redux-firestore": "^0.5.8",
+    "redux-thunk": "^2.3.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@types/jest": "23.3.10",
