--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "workbench.colorCustomizations": {
     "statusBar.background": "#4BB84A"
+  },
+  "files.associations": {
+    "*.js": "javascriptreact"
   }
 }
