--- a/foo/package.json
+++ b/foo/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "east-mesa-karate-event-manager",
+  "name": "foo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.8.1",
-    "@material-ui/icons": "^3.0.1",
-    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
