--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^5.0.0",
+    "react-redux-firebase": "^2.1.8",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
+    "redux-firestore": "~0.5.7",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.54"
   },
