--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app-types": "0.x",
     "@material-ui/core": "^3.8.1",
     "@material-ui/icons": "^3.0.1",
     "firebase": "^5.7.2",
+    "log4js": "^3.0.6",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
